added new module

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
                 <li>mortar</li>
             </ul>
         </div>
+        <Module-two>
+            <div> new changes here</div>
+        </Modeule-two>
     </body>
 </html>
